--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         path: ~/.omniax_venvs
         key: venv-${{ steps.date.outputs.today }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}
         restore-keys: |
-          venv-${{ steps.date.outputs.today }}-
+          venv-${{ steps.date.outputs.today }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}
 
     - name: Checkout code
       uses: actions/checkout@v4
@@ -158,7 +158,7 @@ jobs:
         path: ~/.omniax_venvs
         key: venv-${{ steps.date.outputs.today }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}
         restore-keys: |
-          venv-${{ steps.date.outputs.today }}-
+          venv-${{ steps.date.outputs.today }}-${{ hashFiles('requirements.txt', 'test_requirements.txt') }}
 
     - name: Checkout code
       uses: actions/checkout@v4
