renamed smoke tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           pip install psycopg2-binary
         fi
 
-    - name: Run annoying tiny but important tests that often fail
+    - name: Smoke Tests
       run: |
         .tests/smoke_tests
 
