if push and no platform limit anymore

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,6 +182,7 @@ jobs:
 
     - name: Create a new version
       if: ${{ success() }}
+      if: ${{ github.event_name == 'push' }}
       run: |
         echo "Creating new version"
         git tag ${{ github.run_number }} || true
