--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,44 @@ jobs:
     - name: Run linter
       run: |
         ./.tests/linter --check_only_changed_since_last_success
+  slurm-docker-check:
+    needs: [smoke-tests]
+    runs-on: ubuntu-24.04
+    environment: Production
+    strategy:
+      fail-fast: true
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        tags: true
+
+    - name: Set up Docker Compose
+      run: |
+        sudo apt-get update -y
+        sudo apt-get install -y docker-compose
+
+    - name: Build Slurm containers
+      working-directory: .tests/slurm_docker
+      run: |
+        docker-compose up -d --build
+        docker ps -a
+
+    - name: Verify /oo_dir mount inside slurm-master
+      working-directory: .tests/slurm_docker
+      run: |
+        CONTAINER=$(docker ps --filter "name=slurm-frontend" --format "{{.ID}}")
+        echo "Running ls /oo_dir inside container: $CONTAINER"
+        docker exec "$CONTAINER" ls /oo_dir/
+      continue-on-error: false
+
+    - name: Stop containers
+      if: always()
+      working-directory: .tests/slurm_docker
+      run: |
+        docker-compose down
   install-via-pip:
     needs: [smoke-tests]
     runs-on: ubuntu-24.04
