--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
       run: |
         ./.tests/linter --check_only_changed_since_last_success
   slurm-docker-check:
-    needs: [smoke-tests]
+    #needs: [smoke-tests]
     runs-on: ubuntu-24.04
     environment: Production
     strategy:
