--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   smoke-tests:
+    needs: [slurm-docker]
     strategy:
       fail-fast: true
 
@@ -82,8 +83,7 @@ jobs:
     - name: Run linter
       run: |
         ./.tests/linter --check_only_changed_since_last_success
-  slurm-docker-check:
-    #needs: [smoke-tests]
+  slurm-docker:
     strategy:
       fail-fast: true
     runs-on: ubuntu-24.04
