--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,6 +131,51 @@ jobs:
         docker logs "$CONTAINER"
         exit 1
 
+  - name: Testing
+    working-directory: .tests/slurm_docker
+    run: |
+      echo "================= 🧠 STEP 1: Check slurm.conf (Master) ================="
+      docker exec slurm-master cat /etc/slurm/slurm.conf || true
+
+      echo
+      echo "================= 🔌 STEP 2: Check if slurmctld listens on TCP 6817 ================="
+      echo "→ ss -ltnp | grep 6817 (Master)"
+      docker exec slurm-master ss -ltnp 2>/dev/null | grep 6817 || true
+      echo
+      echo "→ ps aux | grep -E 'slurmctld|slurmd' (Master)"
+      docker exec slurm-master ps aux | grep -E 'slurmctld|slurmd' || true
+
+      echo
+      echo "================= 🔐 STEP 3: Check munge keys and sockets ================="
+      echo "→ Master munge directories"
+      docker exec slurm-master ls -l /etc/munge /var/run/munge /etc/munge/munge.key || true
+      echo
+      echo "→ Node1 munge directories"
+      docker exec slurm-node1 ls -l /etc/munge /var/run/munge || true
+
+      echo
+      echo "================= 🌐 STEP 4: Check TCP connection from frontend to slurm-master:6817 ================="
+      docker exec slurm-frontend bash -lc '</dev/tcp/slurmmaster/6817' && echo "✅ TCP OK" || echo "❌ TCP FAIL"
+
+      echo
+      echo "================= 🧭 STEP 5: Check hostname resolution and ping ================="
+      echo "→ From Node1 to slurmmaster"
+      docker exec slurm-node1 ping -c1 slurmmaster || echo "⚠️ Ping to slurmmaster failed"
+      echo
+      echo "→ From Node1 to itself"
+      docker exec slurm-node1 ping -c1 slurmnode1 || echo "⚠️ Ping to slurmnode1 failed"
+
+      echo
+      echo "================= 📜 STEP 6: Show Slurm logs ================="
+      echo "→ /var/log/slurmctld.log (Master)"
+      docker exec slurm-master tail -n 200 /var/log/slurmctld.log || true
+      echo
+      echo "→ /var/log/slurmd.log (Node1)"
+      docker exec slurm-node1 tail -n 200 /var/log/slurmd.log || true
+
+      echo
+      echo "================= 🧩 Debug sequence finished ================="
+
     - name: Run OO inside slurm inside docker
       working-directory: .tests/slurm_docker
       run: |
