--- a/.tests/slurm_docker/ci/docker-compose.yml
+++ b/.tests/slurm_docker/ci/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     hostname: slurmfrontend
     restart: unless-stopped
     volumes:
-      - ../../:/oo_dir
+      - ../../../:/oo_dir
     networks:
       - slurmnet
 
@@ -17,7 +17,7 @@ services:
       - slurmfrontend
     restart: unless-stopped
     volumes:
-      - ../../:/oo_dir
+      - ../../../:/oo_dir
     networks:
       - slurmnet
 
@@ -29,7 +29,7 @@ services:
       - slurmmaster
     restart: unless-stopped
     volumes:
-      - ../../:/oo_dir
+      - ../../../:/oo_dir
     networks:
       - slurmnet
 
@@ -41,7 +41,7 @@ services:
       - slurmmaster
     restart: unless-stopped
     volumes:
-      - ../../:/oo_dir
+      - ../../../:/oo_dir
     networks:
       - slurmnet
 
@@ -53,7 +53,7 @@ services:
       - slurmmaster
     restart: unless-stopped
     volumes:
-      - ../../:/oo_dir
+      - ../../../:/oo_dir
     networks:
       - slurmnet
 
@@ -65,7 +65,7 @@ services:
       - slurmmaster
     restart: unless-stopped
     volumes:
-      - ../../:/oo_dir
+      - ../../../:/oo_dir
     networks:
       - slurmnet
 
