--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,6 +140,7 @@ jobs:
           docker exec $node bash -c "sudo service munge start" || echo "Failed starting munge on $node"
           echo "Starting slurmd on $node"
           docker exec -d $node bash -c "sudo slurmd -N $SLURM_NODENAME" || echo "Failed starting slurmd on $node"
+          echo "Exit-Code: $?"
         done
 
         # Warten bis Nodes beim Master registriert sind
