--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,33 @@ on:
     - cron: '0 2 * * 0'
 
 jobs:
+  testing:
+    runs-on: ubuntu-latest
+    # For the action to work, you have to supply a mysql
+    # service as defined below.
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - "8888:3306"
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: koesterlab/setup-slurm-action@v1
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        tags: true
+
+    - name: Build package
+      run: |
+        cd omniopt
+        ls
+
   smoke-tests:
     strategy:
       fail-fast: true
