--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,6 @@ jobs:
         .tests/smoke_tests
 
   slurm-test:
-    #needs: [smoke-tests]
     runs-on: ubuntu-latest
     services:
       mysql:
@@ -62,15 +61,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./setup-slurm-action
-
       - name: Install dependencies
         run: |
-          sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring git
+          sudo apt-get update
+          sudo apt-get install -y docker.io xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring git
+
+      - name: Start Slurm cluster container
+        run: |
+          docker run -d --name slurm-test --privileged -e NUM_NODES=2 giovtorres/slurm-docker-cluster:latest
+          sleep 20
 
       - name: Run OmniOpt
         run: |
-          .tests/main --exit_on_first_error --max_eval=2 --num_random_steps=1 --num_parallel_jobs=1 --gpus=0 --no_linkchecker --no_linter --no_plots
+          docker exec slurm-test bash -c ".tests/main --exit_on_first_error --max_eval=2 --num_random_steps=1 --num_parallel_jobs=1 --gpus=0 --no_linkchecker --no_linter --no_plots"
+
+      - name: Stop Slurm container
+        run: docker stop slurm-test
 
   Linter:
     needs: [smoke-tests]
