--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,8 @@ jobs:
 
       - name: Run OmniOpt
         run: |
-          docker exec slurm-test bash -c "apt-get update && apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring git"
+          #docker exec slurm-test bash -c "apt-get update && apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring git"
+          docker exec slurm-test sh -c "which apk && apk update && apk add xterm whiptail python3 php-cli unzip curl git"
           docker exec slurm-test bash -c "./.tests/main --exit_on_first_error --max_eval=2 --num_random_steps=1 --num_parallel_jobs=1 --gpus=0 --no_linkchecker --no_linter --no_plots"
 
       - name: Stop Slurm container
