--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,20 @@ jobs:
       run: |
         .tests/smoke_tests
 
-    - name: Build Slurm CI image
+  slurm-test:
+    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - "8888:3306"
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build Slurm CI image
         run: docker build -t slurm-test-ci -f Dockerfile.ci .
 
       - name: Start Slurm cluster container
