--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,20 +61,45 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build Slurm CI image
-        run: docker build -t slurm-test-ci -f Dockerfile.ci .
-
       - name: Start Slurm cluster container
         run: |
           docker run -d --name slurm-test --privileged \
             -v ${{ github.workspace }}:/workspace \
             -w /workspace \
-            -e NUM_NODES=2 slurm-test-ci
+            -e NUM_NODES=2 giovtorres/slurm-docker-cluster:latest
           sleep 20
 
       - name: Run OmniOpt
         run: |
+          docker exec slurm-test bash -c "\
+      mkdir -p /etc/yum.repos.d/backup && \
+      mv /etc/yum.repos.d/CentOS-* /etc/yum.repos.d/backup/ && \
+      cat > /etc/yum.repos.d/CentOS-Vault.repo <<'EOF'
+[base]
+name=CentOS-7 - Base
+baseurl=http://vault.centos.org/7.9.2009/os/x86_64/
+gpgcheck=1
+enabled=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+[updates]
+name=CentOS-7 - Updates
+baseurl=http://vault.centos.org/7.9.2009/updates/x86_64/
+gpgcheck=1
+enabled=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+[extras]
+name=CentOS-7 - Extras
+baseurl=http://vault.centos.org/7.9.2009/extras/x86_64/
+gpgcheck=1
+enabled=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+EOF
+      yum clean all && yum makecache && \
+      yum install -y epel-release xterm which whiptail python3 python3-devel php-cli unzip curl python3-lib2to3 python3-toolz php-mbstring git"
           docker exec slurm-test bash -c "./.tests/main --exit_on_first_error --max_eval=2 --num_random_steps=1 --num_parallel_jobs=1 --gpus=0 --no_linkchecker --no_linter --no_plots"
+
 
       - name: Stop Slurm container
         run: docker stop slurm-test
