--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -220,7 +220,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         sudo apt-get purge -y man-db manpages
-        sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl 2to3 python3-lib2to3 python3-toolz php-mbstring git
+        sudo apt-get install -y xterm whiptail python3-dev php-cli unzip curl python3-toolz php-mbstring git
         pip install build
         pip install setuptools
     - name: Creating pyproject.toml
