--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,7 +123,7 @@ jobs:
         ./omniopt_docker .tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --superquick --run_with_coverage
 
   main-test:
-    needs: [smoke-tests]
+    needs: [smoke-tests, plot-test]
     runs-on: ${{ matrix.os }}
     environment: Production
     strategy:
@@ -166,14 +166,15 @@ jobs:
         pip install --no-cache-dir pip wheel
         pip install --no-cache-dir multidict
 
+    - name: plot tests
+      run: |
+        bash ./.tests/plots
+
     - name: main test script
       shell: bash
       run: |
         ./.tests/main --num_random_steps=1 --max_eval=2 --exit_on_first_error --no_plots --run_with_coverage
 
-    - name: plot tests
-      run: |
-        bash ./.tests/plots
     - uses: release-drafter/release-drafter@v5
       with:
           config-name: release-drafter.yml
